Connected to Firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,13 @@ android {
     }
     productFlavors {
     }
+    packagingOptions{
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
+    compile 'com.firebase:firebase-client:1.0.18+'
     compile fileTree(include: ['*.jar'], dir: 'libs')
 }
